# FaithDPO

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
FaithDPO/: __init__.py  client.py  config.py
FaithDPO-Data/: dpo_data_v1.jsonl  dpo_data_v2.jsonl
FaithDPO/metrics/: __init__.py  extractiveness.py
FaithDPO/pipelines/: __init__.py  base.py  sentence_extract.py  transition_generate.py
FaithDPO/utils/: __init__.py  llm.py  text.py
examples/: basic_usage.py  pipeline_comparison.py
script/: convert_dpo_data.py  qwen_vl_environment.yml  train_dpo_faith.py
