[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FaithDPO"
version = "0.1.0"
description = "Faithful Extraction for RAG Hallucination Reduction via Direct Preference Optimization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"},
]
keywords = ["rag", "nlp", "hallucination", "extractive-generation", "dpo", "faithful"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "jieba>=0.42.0",
    "httpx>=0.27.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]
viz = [
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
]
full = ["FaithDPO[dev,viz]"]

[project.urls]
Homepage = "https://github.com/yourusername/FaithDPO"
Documentation = "https://github.com/yourusername/FaithDPO#readme"
Repository = "https://github.com/yourusername/FaithDPO"

[tool.hatch.build.targets.wheel]
packages = ["FaithDPO"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
